# Magma

./: .gitignore  README.md  pyproject.toml  test.py  test_huggingface.py  train.py
agents/game_agent/: app.py
agents/game_agent/frozen_lake/: app.py
agents/libero/: eval_magma_libero.py  libero_env_utils.py  libero_magma_utils.py
agents/robot_traj/: app.py  app.pyi
agents/ui_agent/: app.py
agents/ui_agent/util/: som.py  utils.py
agents/web_agent/: instructions.py  smolagent.py
data/: conversations.py  data_collator.py  data_item.py  dataset.py
data/ego4d/: data_utils.py
data/epic/: data_utils.py
data/llava/: data_utils.py
data/magma/: data_utils.py
data/openx/: data_utils.py  materialize.py
data/openx/datasets/: datasets.py
data/openx_magma/: data_utils.py
data/seeclick/: data_utils.py
data/utils/: som_tom.py  visual_trace.py  visual_tracker.py
magma/: configuration_magma.py  image_processing_magma.py  image_tower_magma.py  modeling_magma.py  processing_magma.py
scripts/: finetune_magma_820k_debug.sh  utils.py  visualize.py
tools/lmms-eval-magma/: magma.py
tools/simplerenv-magma/simpler_env/policies/magma/: magma_model.py
tools/som_tom/: demo.py
tools/trace-of-mark/: demo.py
trainer/: trainer.py
video_preprocessing/: curate_list.py  run_clip_filtering.py  run_detect_segments.py
